@startuml
skinparam classAttributeIconSize 0

class AgentController
class AgentService
class SessionService
class ModelGateway
class AgentToolOrchestrator
class ToolAuditService
class AuthService
class SystemDiagnosticsService

AgentController --> AgentService
AgentController --> AuthService
AgentService --> SessionService
AgentService --> ModelGateway
AgentService --> AgentToolOrchestrator
AgentService --> ToolAuditService
SystemDiagnosticsService ..> SessionService : uses storage/services
SystemDiagnosticsService ..> ModelGateway : probe model provider
AuthService ..> SessionService : user identity boundary
@enduml
